# kaggle-ecommerce-data-platform

./: .gitignore  AGENTS.md  DEPLOYMENT_GUIDE.md  ECONOMIC_DATA_PLATFORM_IMPLEMENTATION_PLAN.md  README.md  data_platform_standard.md
.sisyphus/: boulder.json
economic-data-platform/: .env.dokploy  .env.example  .gitignore  AGENTS.md  DATA_PLATFORM_STRUCTURE.md  Dockerfile  Dockerfile.dokploy  Dockerfile.minimal  LICENSE  Makefile  README.md  RESTRUCTURE_SUMMARY.md  docker-compose.dokploy.yml  docker-compose.yml  pyproject.toml  requirements-minimal.txt  requirements.prod.txt  requirements.txt
economic-data-platform/.github/workflows/: ci.yml  deploy.yml
economic-data-platform/airflow/: AGENTS.md
economic-data-platform/airflow/common/: __init__.py  callbacks.py  default_args.py
economic-data-platform/data_quality/great_expectations/: great_expectations.yml  run_checkpoint.py
economic-data-platform/dbt/: AGENTS.md  dbt_project.yml  profiles.yml
economic-data-platform/dbt/macros/: data_platform_macros.sql
economic-data-platform/dbt/models/: README.md
economic-data-platform/docs/: DOKPLOY_DEPLOYMENT.md  VPS_OPTIMIZATION_PLAN.md
economic-data-platform/dokploy/: AGENTS.md  README.md
economic-data-platform/infra/: AGENTS.md
economic-data-platform/ingestion/: AGENTS.md
economic-data-platform/scripts/: backup.sh  deploy-dokploy.sh  deploy.sh  run_olist_ingestion.py  test_mssql_connection.py
economic-data-platform/src/: AGENTS.md  __init__.py  pyproject.toml
economic-data-platform/tests/: conftest.py
economic-data-platform/tools/: data_platform_cli.py
economic-data-platform/ui/: AGENTS.md  SKILL.md
(+184 files in other folders)
