[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-platform"
version = "1.0.0"
description = "Internal shared library for Economic Data Platform"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.26",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
